--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-dom": "^16.7.0-alpha.2",
     "react-scripts": "2.1.1",
     "react-spring": "^6.1.10",
+    "react-textarea-autosize": "^7.1.0",
     "recompose": "^0.30.0",
     "styled-system": "^3.2.1"
   },
