--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "not op_mini all"
   ],
   "devDependencies": {
-    "flow-bin": "0.87",
+    "flow-bin": "^0.92.0",
     "prettier": "^1.15.3"
   }
 }
