--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "debounce": "^1.2.0",
     "emotion": "^10.0.4",
     "emotion-theming": "^10.0.4",
+    "firebase": "^5.8.2",
     "formik": "^1.4.1",
     "moment": "^2.22.2",
     "polished": "^2.3.3",
@@ -16,11 +17,12 @@
     "react": "^16.7.0-alpha.2",
     "react-dom": "^16.7.0-alpha.2",
     "react-scripts": "2.1.1",
-    "react-spring": "^6.1.10",
+    "react-spring": "^7.2.10",
     "react-textarea-autosize": "^7.1.0",
     "recompose": "^0.30.0",
     "styled-system": "^3.2.1",
-    "uuid": "^3.3.2"
+    "uuid": "^3.3.2",
+    "yup": "^0.26.10"
   },
   "scripts": {
     "start": "react-scripts start",
