--- a/functions/package.json
+++ b/functions/package.json
@@ -15,7 +15,8 @@
     "firebase-admin": "^7.0.0",
     "firebase-functions": "^2.2.0",
     "graphql": "^14.1.1",
-    "graphql-tools": "^4.0.4"
+    "graphql-tools": "^4.0.4",
+    "ramda": "^0.26.1"
   },
   "devDependencies": {
     "eslint": "^4.12.0",
