* added apollo (with hooks) * tales now come from firebase

--- a/package.json
+++ b/package.json
@@ -6,18 +6,24 @@
     "@emotion/core": "^10.0.4",
     "@emotion/styled": "^10.0.4",
     "@reach/router": "^1.2.1",
+    "apollo-cache-inmemory": "^1.4.2",
+    "apollo-client": "^2.4.12",
+    "apollo-link-http": "^1.5.11",
     "debounce": "^1.2.0",
     "emotion": "^10.0.4",
     "emotion-theming": "^10.0.4",
     "firebase": "^5.8.2",
     "formik": "^1.4.1",
+    "graphql": "^14.1.1",
+    "graphql-tag": "^2.10.1",
     "moment": "^2.22.2",
     "polished": "^2.3.3",
     "ramda": "^0.26.1",
     "react": "^16.7.0-alpha.2",
+    "react-apollo-hooks": "^0.3.1",
     "react-dom": "^16.7.0-alpha.2",
     "react-scripts": "2.1.1",
-    "react-spring": "^7.2.10",
+    "react-spring": "^8.0.4",
     "react-textarea-autosize": "^7.1.0",
     "recompose": "^0.30.0",
     "styled-system": "^3.2.1",
@@ -25,7 +31,7 @@
     "yup": "^0.26.10"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "NODE_ENV=development react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
