--- a/functions/package.json
+++ b/functions/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "apollo-server-express": "^2.3.3",
+    "cookie-parser": "^1.4.3",
     "cors": "^2.8.5",
     "firebase-admin": "^7.0.0",
     "firebase-functions": "^2.2.0",
