--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@reach/router": "^1.2.1",
     "apollo-cache-inmemory": "^1.4.2",
     "apollo-client": "^2.4.12",
+    "apollo-link-context": "^1.0.14",
     "apollo-link-http": "^1.5.11",
     "debounce": "^1.2.0",
     "emotion": "^10.0.4",
